// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSheet should render cancel text when using cancel-text prop 1`] = `
<button
  class="rc-share-sheet__cancel"
  type="button"
>
  foo
</button>
`;

exports[`ShareSheet should render description and title when using description prop and title prop 1`] = `
<div
  class="rc-share-sheet__description"
>
  foo
</div>
`;

exports[`ShareSheet should render description and title when using description prop and title prop 2`] = `
<div
  class="rc-share-sheet__title"
>
  hoo
</div>
`;

exports[`ShareSheet should render multi Line when option item is array 1`] = `
<div
  class="rc-popup rc-popup--round rc-popup--bottom rc-safe-area-bottom rc-share-sheet"
  style="z-index: 2000; transition-duration: 300ms;"
>
  <div
    class="rc-share-sheet__options"
  >
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-wechat.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        微信
      </span>
    </div>
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-wechat-moments.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        朋友圈
      </span>
    </div>
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-weibo.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        微博
      </span>
    </div>
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-qq.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        QQ
      </span>
    </div>
  </div>
  <div
    class="rc-share-sheet__options rc-share-sheet__options--border"
  >
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-link.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        复制链接
      </span>
    </div>
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-poster.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        分享海报
      </span>
    </div>
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-qrcode.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        二维码
      </span>
    </div>
    <div
      class="rc-share-sheet__option"
      role="button"
      tabindex="0"
    >
      <img
        alt="share sheet icon"
        class="rc-share-sheet__icon"
        src="https://img.yzcdn.cn/vant/share-sheet-weapp-qrcode.png"
      />
      <span
        class="rc-share-sheet__name"
      >
        小程序码
      </span>
    </div>
  </div>
  <button
    class="rc-share-sheet__cancel"
    type="button"
  >
    取消
  </button>
</div>
`;
